# PangoTest

./: .autotools  .cproject  .gitignore  .project  Makefile.in  NEWS  README.md  configure  configure.ac
src/: Makefile.am  Makefile.in  PangoTest.cpp
